--- a/app/views/polls/edit.haml
+++ b/app/views/polls/edit.haml
@@ -14,3 +14,12 @@
 = form [@poll, Choice.new] do |f|
   = f.text_field :name
   = f.submit 'Add'
+
+
+%br
+%br
+%br
+
+= form @poll do |f|
+  = f.check_box :live, label: 'Poll is live'
+  = f.submit 'Save'
