--- a/app/views/polls/edit.haml
+++ b/app/views/polls/edit.haml
@@ -21,6 +21,7 @@
 %br
 
 = form @poll do |f|
+  = f.text_field :name
   = f.text_field :slug
   = f.check_box :live, label: 'Poll is live'
   = f.submit 'Save'
