--- a/app/views/choices/show.haml
+++ b/app/views/choices/show.haml
@@ -7,3 +7,8 @@
   = f.text_field :name
   = f.check_box :live
   = f.submit 'Update'
+
+
+%p or
+
+= link_to 'Delete', @choice, method: :delete, data: { confirm: 'Are you sure you want to delete this choice?' }
