--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css', integrity: 'sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor', crossorigin: 'anonymous'
-    = stylesheet_link_tag 'ballot', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'ballot', media: 'all'
     = javascript_importmap_tags
     %meta{ charset: 'utf8' }
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1, shrink-to-fit=no' }
