--- a/app/assets/stylesheets/ballot.css
+++ b/app/assets/stylesheets/ballot.css
@@ -10,6 +10,14 @@
 	display: none;
 }
 
+.ballot .rankings .add {
+	display: none;
+}
+
+.ballot .add {
+	float: right;
+}
+
 .ballot .undo {
 	float: right;
 }
